build_errors.txt
    Checking twilight-console v0.1.0 (/media/earthling/Caleb's Files2/Twilight-Bark/twilight-console/src-tauri)
error[E0432]: unresolved import `futures`
 --> twilight-console/src-tauri/src/lib.rs:5:5
  |
5 | use futures::StreamExt;
  |     ^^^^^^^ use of unresolved module or unlinked crate `futures`
  |
  = help: if you wanted to use a crate named `futures`, use `cargo add futures` to add it to your `Cargo.toml`

warning: unused imports: `AgentPresence`, `Heartbeat`, and `TwilightEnvelope`
 --> twilight-console/src-tauri/src/lib.rs:3:32
  |
3 | use twilight_proto::twilight::{TwilightEnvelope, AgentPresence, Heartbeat};
  |                                ^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `next` found for struct `Pin<Box<dyn Stream<Item = ...> + Send>>` in the current scope
  --> twilight-console/src-tauri/src/lib.rs:37:47
   |
37 |             while let Some(envelope) = stream.next().await {
   |                                               ^^^^
   |
   = help: items from traits can only be used if the trait is in scope
   = note: the full name for the type has been written to '/media/earthling/Caleb's Files2/Twilight-Bark/target/debug/deps/twilight_console_lib-0b4fdb57a0d1d8b0.long-type-10774347835077796620.txt'
   = note: consider using `--verbose` to print the full type name to the console
help: the following traits which provide `next` are implemented but not in scope; perhaps you want to import one of them
   |
 1 + use futures_lite::stream::StreamExt;
   |
 1 + use futures_util::stream::stream::StreamExt;
   |
help: there is a method `try_next` with a similar name
   |
37 |             while let Some(envelope) = stream.try_next().await {
   |                                               ++++

error[E0599]: no method named `next` found for struct `Pin<Box<dyn Stream<Item = ...> + Send>>` in the current scope
  --> twilight-console/src-tauri/src/lib.rs:51:47
   |
51 |             while let Some(presence) = stream.next().await {
   |                                               ^^^^
   |
   = help: items from traits can only be used if the trait is in scope
   = note: the full name for the type has been written to '/media/earthling/Caleb's Files2/Twilight-Bark/target/debug/deps/twilight_console_lib-0b4fdb57a0d1d8b0.long-type-1439115395783574392.txt'
   = note: consider using `--verbose` to print the full type name to the console
help: the following traits which provide `next` are implemented but not in scope; perhaps you want to import one of them
   |
 1 + use futures_lite::stream::StreamExt;
   |
 1 + use futures_util::stream::stream::StreamExt;
   |
help: there is a method `try_next` with a similar name
   |
51 |             while let Some(presence) = stream.try_next().await {
   |                                               ++++

error[E0282]: type annotations needed
  --> twilight-console/src-tauri/src/lib.rs:52:53
   |
52 |                 presence_controller.update_presence(presence.clone());
   |                                                     ^^^^^^^^ cannot infer type

error[E0599]: no method named `next` found for struct `Pin<Box<dyn Stream<Item = Heartbeat> + Send>>` in the current scope
  --> twilight-console/src-tauri/src/lib.rs:63:41
   |
63 |             while let Some(hb) = stream.next().await {
   |                                         ^^^^
   |
   = help: items from traits can only be used if the trait is in scope
   = note: the full name for the type has been written to '/media/earthling/Caleb's Files2/Twilight-Bark/target/debug/deps/twilight_console_lib-0b4fdb57a0d1d8b0.long-type-11053818207080546422.txt'
   = note: consider using `--verbose` to print the full type name to the console
help: the following traits which provide `next` are implemented but not in scope; perhaps you want to import one of them
   |
 1 + use futures_lite::stream::StreamExt;
   |
 1 + use futures_util::stream::stream::StreamExt;
   |
help: there is a method `try_next` with a similar name
   |
63 |             while let Some(hb) = stream.try_next().await {
   |                                         ++++

error[E0282]: type annotations needed
  --> twilight-console/src-tauri/src/lib.rs:64:48
   |
64 |                 hb_controller.update_heartbeat(hb.clone());
   |                                                ^^ cannot infer type

error[E0599]: no method named `receiver` found for struct `zenoh::api::handlers::fifo::FifoChannelHandler<T>` in the current scope
  --> twilight-console/src-tauri/src/lib.rs:86:34
   |
86 |         let mut stream = replies.receiver();
   |                                  ^^^^^^^^
   |
help: there is a method `recv` with a similar name
   |
86 -         let mut stream = replies.receiver();
86 +         let mut stream = replies.recv();
   |

warning: unused import: `Manager`
 --> twilight-console/src-tauri/src/lib.rs:7:33
  |
7 | use tauri::{AppHandle, Emitter, Manager, State};
  |                                 ^^^^^^^

warning: unused variable: `state`
  --> twilight-console/src-tauri/src/lib.rs:98:38
   |
98 | ...u16, state: State<'_, AppState>) -> Result<String, String> {
   |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_state`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

Some errors have detailed explanations: E0282, E0432, E0599.
For more information about an error, try `rustc --explain E0282`.
warning: `twilight-console` (lib) generated 3 warnings
error: could not compile `twilight-console` (lib) due to 7 previous errors; 3 warnings emitted
